# learning_rust

./: .gitignore  Cargo.toml  test.txt
address_vec/: Cargo.toml
address_vec/src/: main.rs
advanced_function_and_closures/: Cargo.toml
advanced_function_and_closures/src/: main.rs
advanced_traits/src/: main.rs
advanced_types/src/: main.rs
async_programming/: 404.html  Cargo.toml  hello.html  user_name.txt
async_programming/src/: main.rs
best_practices_for_pkg_with_bin_and_lib/: Cargo.toml
best_practices_for_pkg_with_bin_and_lib/src/: lib.rs  main.rs
best_practices_for_pkg_with_bin_and_lib/src/server/: mod.rs
best_practices_for_pkg_with_bin_and_lib/src/server/sub_server/: mod.rs
closure/src/: lib.rs
common_collections/src/: main.rs
define_module/: Cargo.toml
define_module/src/: kitchen.rs  main.rs
error_handling/src/: main.rs
fearless_concurrency/src/: main.rs
functional_language/: Cargo.toml
functional_language/src/: main.rs
generic_types_traits_and_lifetimes/src/: main.rs
igd_port_forwarding/: Cargo.toml
igd_port_forwarding/src/: main.rs
ipv6_tcp_server/: Cargo.toml
ipv6_tcp_server/src/: main.rs
macros/src/: main.rs
minigrep/src/: lib.rs  main.rs
multithreaded_web_server/src/: lib.rs  main.rs
object_oriented_features_of_rust/: Cargo.toml
object_oriented_features_of_rust/src/: main.rs
package_and_crate/: Cargo.toml
package_and_crate/src/: main.rs
patterns_and_matching/src/: main.rs
smart_pointers/src/: main.rs
src/: main.rs
test_rust/src/: lib.rs
thread_sleep_control/: Cargo.toml
uncompile_debug_code/: Cargo.toml
using_docker_in_rust/: Cargo.toml
(+13 files in other folders)
