[workspace]
members = [
    "package_and_crate",
    "define_module",
    "best_practices_for_pkg_with_bin_and_lib",
    "common_collections",
    "error_handling",
    "rustlings",
    "generic_types_traits_and_lifetimes",
    "writing_automated_tests",
    "minigrep",
    "for_test_code",
    "functional_language",
    "smart_pointers",
    "fearless_concurrency",
]