[workspace]
members = [
    "package_and_crate",
    "define_module",
    "best_practices_for_pkg_with_bin_and_lib",
    "common_collections",
    "error_handling",
    "rustlings",
    "generic_types_traits_and_lifetimes",
    "writing_automated_tests",
    "minigrep",
    "for_test_code",
    "functional_language",
    "smart_pointers",
    "fearless_concurrency",
    "object_oriented_features_of_rust",
    "patterns_and_matching",
    "unsafe_rust",
    "advanced_traits",
    "advanced_types",
    "advanced_function_and_closures",
    "macros",
    "macros/hello_macro",
    "macros/hello_macro/hello_macro_derive",
    "multithreaded_web_server",
    "async_programming",
    "igd_port_forwarding",
    "uncompile_debug_code",
    "udp_server",
    "udp_client",
    "ipv6_tcp_server"

]