[package]
name = "best_practices_for_pkg_with_bin_and_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# set lib path and name to replace package'name and path
[lib]
name = "lib"
path = "src/lib.rs"
